Hopefully fix mobile layout issues

--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    height: 80vh;
+    width: 80vw;
     background-color: #f0f0f0; 
 }
 
@@ -28,7 +28,7 @@ button {
     flex-direction: column;
     box-sizing: border-box;
     border: 2px solid #121212;
-    padding: 1em;
+    padding: 16px;
     gap: 2px;
     border-radius: 10px;
     align-content: stretch;
@@ -50,8 +50,8 @@ button {
     overflow-x: auto; /* Aktiviert den horizontalen Scrollbalken */
     white-space: nowrap; /* Verhindert Umbrüche, damit der Text in einer Zeile bleibt */
     border-radius: 10px;
-    font-size: 250%;
-    min-height: 1.5em;
+    font-size: 2rem;
+    min-height: 3rem;
     max-width: 100%; /* Prevent the item from growing wider than the container */
     max-height: 100%; /* Prevent the item from growing taller than the container */
 }
@@ -68,7 +68,7 @@ button {
     justify-content: center;
     background-color: #ff9a27;
     color: rgb(0, 0, 0);
-    font-size: 200%;
+    font-size: 2rem;
     border-radius: 5px;
 }
 
@@ -94,7 +94,7 @@ button {
     align-items: center;
     justify-content: center;
     color: rgb(0, 0, 0);
-    font-size: 200%;
+    font-size: 2rem;    
     border-radius: 5px;
     height: calc(100% / 4); /* 5 Reihen insgesamt */
 }
